--- a/three_animals_cnn.ipynb
+++ b/three_animals_cnn.ipynb
@@ -212,6 +212,27 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m5IbS4wQZ75N"
+      },
+      "source": [
+        "# serialize model to JSON\n",
+        "model_json = model.to_json()\n",
+        "with open(\"model.json\", \"w\") as json_file:\n",
+        "  json_file.write(model_json)\n",
+        "# serialize weights to HDF5\n",
+        "model.save_weights(\"model.h5\")\n",
+        "print(\"Saved model to disk\")\n",
+        "\n",
+        "from json import dump\n",
+        "with open('class_indices.json', 'w') as f:\n",
+        "  dump(train_generator.class_indices, f)"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
