--- a/Handson_5.ipynb
+++ b/Handson_5.ipynb
@@ -240,6 +240,8 @@
         "from tensorflow.keras.models import Sequential\n",
         "from tensorflow.keras.preprocessing.image import ImageDataGenerator, load_img, img_to_array\n",
         "from tensorflow.keras.layers import Conv2D, MaxPool2D, Dense, Flatten\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Setup training images and testing images\n",
@@ -268,7 +270,8 @@
         "                    test_dir,\n",
         "                    batch_size=32,\n",
         "                    target_size=(150,150),\n",
-        "                    class_mode='categorical')"
+        "                    class_mode='categorical',\n",
+        "                    shuffle=False)"
       ],
       "execution_count": null,
       "outputs": []
@@ -330,6 +333,34 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "TRVGHoFGYwm_"
+      },
+      "source": [
+        "# Show the confusion matrix\n",
+        "pred = model.predict_generator(test_generator)\n",
+        "y_pred = np.argmax(pred, axis=1)\n",
+        "cm = confusion_matrix(test_generator.classes, y_pred)\n",
+        "plt.style.use('default')\n",
+        "fig = plt.figure()\n",
+        "ax = plt.gca()\n",
+        "im = ax.matshow(cm)\n",
+        "for i, j in enumerate(cm.ravel()):\n",
+        "    ax.text(i%3, i//3, f'{j}', color='w', size='large', weight='bold', ha='center')\n",
+        "ax.xaxis.set_ticks_position('bottom')\n",
+        "ax.set_xticks(np.arange(3))\n",
+        "ax.set_xticklabels(list(train_generator.class_indices))\n",
+        "ax.set_yticks(np.arange(3))\n",
+        "ax.set_yticklabels(list(train_generator.class_indices))\n",
+        "ax.set_xlabel('Predicted label')\n",
+        "ax.set_ylabel('True label')\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "MZMUqAEjACOu"
       },
       "source": [
@@ -372,16 +403,21 @@
         "with open('class_indices1.json', 'r') as f:\n",
         "    class_indices = load(f)\n",
         "print(\"Loaded model from disk\")\n",
-        "print(class_indices)\n",
         "map2class = {class_indices[k]:k for k in class_indices}\n",
         "\n",
-        "# print the predicted class\n",
+        "# Display the test image and show the predicted class\n",
         "file = 'practical_ai/animal01.jpg'\n",
         "img = load_img(file, target_size=(150, 150))\n",
         "x = img_to_array(img)/255.\n",
         "x = np.expand_dims(x, axis=0)\n",
         "classes = model.predict(x)\n",
-        "print(f'{file} predicted as {map2class[classes.argmax()]}')\n"
+        "for i, k in enumerate(class_indices):\n",
+        "  print(f'{k:10}: {classes[0, i]: .3f}')\n",
+        "\n",
+        "plt.axis(False)\n",
+        "plt.imshow(load_img(file))\n",
+        "plt.title(f'Predicted as {map2class[classes.argmax()]}', y=0, pad=-10, verticalalignment=\"top\")\n",
+        "plt.show()\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -410,6 +446,8 @@
         "from tensorflow.keras.applications.inception_v3 import InceptionV3\n",
         "from tensorflow.keras import Model\n",
         "from tensorflow.keras.optimizers import RMSprop\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Setup training images and testing images\n",
@@ -438,7 +476,8 @@
         "                    test_dir,\n",
         "                    batch_size=32,\n",
         "                    target_size=(150,150),\n",
-        "                    class_mode='categorical')"
+        "                    class_mode='categorical',\n",
+        "                    shuffle=False)"
       ],
       "execution_count": null,
       "outputs": []
@@ -516,6 +555,48 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "kYDtIzD0_ca-"
+      },
+      "source": [
+        "# Show the confusion matrix\n",
+        "pred = model.predict_generator(test_generator)\n",
+        "y_pred = np.argmax(pred, axis=1)\n",
+        "cm = confusion_matrix(test_generator.classes, y_pred)\n",
+        "plt.style.use('default')\n",
+        "fig = plt.figure()\n",
+        "ax = plt.gca()\n",
+        "im = ax.matshow(cm)\n",
+        "for i, j in enumerate(cm.ravel()):\n",
+        "    ax.text(i%3, i//3, f'{j}', color='w', size='large', weight='bold', ha='center')\n",
+        "ax.xaxis.set_ticks_position('bottom')\n",
+        "ax.set_xticks(np.arange(3))\n",
+        "ax.set_xticklabels(list(train_generator.class_indices))\n",
+        "ax.set_yticks(np.arange(3))\n",
+        "ax.set_yticklabels(list(train_generator.class_indices))\n",
+        "ax.set_xlabel('Predicted label')\n",
+        "ax.set_ylabel('True label')\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6TQgqnBDVHAL"
+      },
+      "source": [
+        "# List files that were missclassified\n",
+        "p = test_generator.classes != y_pred\n",
+        "file_errors = [test_generator.filenames[i] for i, j in enumerate(p) if j]\n",
+        "print(file_errors)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "NJw3jdmMACOw"
       },
       "source": [
@@ -558,16 +639,21 @@
         "with open('class_indices2.json', 'r') as f:\n",
         "    class_indices = load(f)\n",
         "print(\"Loaded model from disk\")\n",
-        "print(class_indices)\n",
         "map2class = {class_indices[k]:k for k in class_indices}\n",
         "\n",
-        "# print the predicted class\n",
+        "# Display the test image and show the predicted class\n",
         "file = 'practical_ai/animal01.jpg'\n",
         "img = load_img(file, target_size=(150, 150))\n",
         "x = img_to_array(img)/255.\n",
         "x = np.expand_dims(x, axis=0)\n",
         "classes = model.predict(x)\n",
-        "print(f'{file} predicted as {map2class[classes.argmax()]}')"
+        "for i, k in enumerate(class_indices):\n",
+        "  print(f'{k:10}: {classes[0, i]: .3f}')\n",
+        "\n",
+        "plt.axis(False)\n",
+        "plt.imshow(load_img(file))\n",
+        "plt.title(f'Predicted as {map2class[classes.argmax()]}', y=0, pad=-10, verticalalignment=\"top\")\n",
+        "plt.show()"
       ],
       "execution_count": null,
       "outputs": []
