--- a/Handson_5.ipynb
+++ b/Handson_5.ipynb
@@ -6,7 +6,6 @@
     "colab": {
       "name": "mnist_lenet.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -170,16 +169,25 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# Evaluate the performance of the trained model using the test set\n",
+        "score = model.evaluate(test_images, test_labels)\n",
+        "print(f'Loss: {score[0]:.4f}, accuracy: {score[1]:.4f}')"
+      ],
+      "metadata": {
+        "id": "iXDzhEF2XPaa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "P6Y_Fac2ACOs"
       },
       "source": [
-        "# Evaluate the performance of the trained model using the test set\n",
-        "score = model.evaluate(test_images, test_labels)\n",
-        "print(f'Loss: {score[0]:.4f}, accuracy: {score[1]:.4f}')\n",
-        "\n",
-        "# Predict the label of a test image (change n to test another image)\n",
-        "n = 911\n",
+        "# Predict the label of a test image (change n to between 0 and 9999 test another image)\n",
+        "n = 1111\n",
         "x = np.expand_dims(test_images[n], axis=0)\n",
         "classes = model.predict(x)\n",
         "print(f'Predicted label: {classes.argmax()}')\n",
@@ -319,9 +327,10 @@
         "val_acc = history.history['val_acc']\n",
         "val_loss = history.history['val_loss']\n",
         "\n",
-        "plt.plot(range(len(acc)), acc, 'b', label='accuracy')\n",
-        "plt.plot(range(len(val_acc)), val_acc, 'g', label='val_accuracy')\n",
+        "plt.plot(np.arange(1, len(acc) + 1), acc, 'b', label='accuracy')\n",
+        "plt.plot(np.arange(1, len(val_acc) + 1), val_acc, 'g', label='val_accuracy')\n",
         "plt.xlabel('Epoch')\n",
+        "plt.xticks(np.arange(1, len(acc) + 1))\n",
         "plt.ylabel('Accuracy')\n",
         "plt.title('Model Accuracy')\n",
         "plt.legend(loc=0)\n",
@@ -337,7 +346,7 @@
       },
       "source": [
         "# Show the confusion matrix\n",
-        "pred = model.predict_generator(test_generator)\n",
+        "pred = model.predict(test_generator)\n",
         "y_pred = np.argmax(pred, axis=1)\n",
         "cm = confusion_matrix(test_generator.classes, y_pred)\n",
         "plt.style.use('default')\n",
@@ -402,9 +411,15 @@
         "# load class indices\n",
         "with open('class_indices1.json', 'r') as f:\n",
         "    class_indices = load(f)\n",
-        "print(\"Loaded model from disk\")\n",
-        "map2class = {class_indices[k]:k for k in class_indices}\n",
-        "\n",
+        "print(\"Model loaded from disk\")\n",
+        "map2class = {class_indices[k]:k for k in class_indices}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Display the test image and show the predicted class\n",
         "file = 'practical_ai/animal01.jpg'\n",
         "img = load_img(file, target_size=(150, 150))\n",
@@ -417,8 +432,11 @@
         "plt.axis(False)\n",
         "plt.imshow(load_img(file))\n",
         "plt.title(f'Predicted as {map2class[classes.argmax()]}', y=0, pad=-10, verticalalignment=\"top\")\n",
-        "plt.show()\n"
+        "plt.show()"
       ],
+      "metadata": {
+        "id": "dsMfLjA9Ztvk"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -541,9 +559,10 @@
         "val_acc = history.history['val_acc']\n",
         "val_loss = history.history['val_loss']\n",
         "\n",
-        "plt.plot(range(len(acc)), acc, 'b', label='accuracy')\n",
-        "plt.plot(range(len(val_acc)), val_acc, 'g', label='val_accuracy')\n",
+        "plt.plot(np.arange(1, len(acc) + 1), acc, 'b', label='accuracy')\n",
+        "plt.plot(np.arange(1, len(val_acc) + 1), val_acc, 'g', label='val_accuracy')\n",
         "plt.xlabel('Epoch')\n",
+        "plt.xticks(np.arange(1, len(acc) + 1))\n",
         "plt.ylabel('Accuracy')\n",
         "plt.title('Model Accuracy')\n",
         "plt.legend(loc=0)\n",
@@ -559,7 +578,7 @@
       },
       "source": [
         "# Show the confusion matrix\n",
-        "pred = model.predict_generator(test_generator)\n",
+        "pred = model.predict(test_generator)\n",
         "y_pred = np.argmax(pred, axis=1)\n",
         "cm = confusion_matrix(test_generator.classes, y_pred)\n",
         "plt.style.use('default')\n",
@@ -638,9 +657,15 @@
         "# load class indices\n",
         "with open('class_indices2.json', 'r') as f:\n",
         "    class_indices = load(f)\n",
-        "print(\"Loaded model from disk\")\n",
-        "map2class = {class_indices[k]:k for k in class_indices}\n",
-        "\n",
+        "print(\"Model loaded from disk\")\n",
+        "map2class = {class_indices[k]:k for k in class_indices}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Display the test image and show the predicted class\n",
         "file = 'practical_ai/animal01.jpg'\n",
         "img = load_img(file, target_size=(150, 150))\n",
@@ -655,6 +680,9 @@
         "plt.title(f'Predicted as {map2class[classes.argmax()]}', y=0, pad=-10, verticalalignment=\"top\")\n",
         "plt.show()"
       ],
+      "metadata": {
+        "id": "q9NKlPHqb5Kc"
+      },
       "execution_count": null,
       "outputs": []
     }
