Updated to use proper f-string to print the percentage

--- a/handson_4a.ipynb
+++ b/handson_4a.ipynb
@@ -151,7 +151,8 @@
       "source": [
         "#Step 6: Evaluate the neural network model on the test set\n",
         "scores = model.evaluate(X_test, y_test)\n",
-        "print(f\"{model.metrics_names[1]}: {100 * scores[1]:.2f} %\")"
+        "print(f\"{model.metrics_names[0]}: {scores[0]:.2f}\")\n",
+        "print(f\"{model.metrics_names[1]}: {scores[1]:.2%}\")"
       ],
       "execution_count": null,
       "outputs": []
