--- a/handson_4a.ipynb
+++ b/handson_4a.ipynb
@@ -77,8 +77,7 @@
         "\n",
         "# To do: Import EarlyStopping from tensorflow.keras.callbacks\n",
         "\n",
-        "# fix random seed for reproducibility\n",
-        "numpy.random.seed(7)"
+        "numpy.random.seed(7)  # fix random seed for reproducibility"
       ],
       "execution_count": null,
       "outputs": []
