Updated for new version of Tensorflow

--- a/handson_4b.ipynb
+++ b/handson_4b.ipynb
@@ -125,7 +125,7 @@
         "model.add(Dense(num_classes, kernel_initializer='normal', activation='softmax'))\n",
         "\n",
         "# To do: Try with other optimizers (RMSprop, Adam)\n",
-        "opt = SGD(lr=0.01)\n",
+        "opt = SGD(learning_rate=0.01)\n",
         "\n",
         "# Compile model\n",
         "model.compile(loss='categorical_crossentropy', optimizer=opt, metrics=['accuracy'])\n",
