Updated to plot accuracy and loss, and to get user's input for the index of test image.

--- a/handson_4b.ipynb
+++ b/handson_4b.ipynb
@@ -119,9 +119,6 @@
         "# create model\n",
         "model = Sequential()\n",
         "model.add(Dense(num_pixels, input_dim=num_pixels, kernel_initializer='normal', activation='relu'))\n",
-        "\n",
-        "# To do: Add another fully-connected (dense) layer here\n",
-        "\n",
         "model.add(Dense(num_classes, kernel_initializer='normal', activation='softmax'))\n",
         "\n",
         "# To do: Try with other optimizers (RMSprop, Adam)\n",
@@ -141,19 +138,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "AUZQ5gIEeSXU"
+        "id": "aWjdmhLAeSXV"
       },
       "source": [
-        "# Make predition (change index to a number between 0 and 9999)\n",
-        "index = 1111\n",
-        "res = model.predict(X_test[index].reshape(1, 784))\n",
-        "print(res)\n",
-        "print(f'Predicted label: {np.argmax(res)}')\n",
+        "# Plot the accuracy and loss for both training and validation data\n",
+        "import matplotlib.pyplot as plt\n",
+        "plt.plot(history.history['accuracy'], 'b', label='train')\n",
+        "plt.plot(history.history['val_accuracy'], 'g', label='test')\n",
+        "plt.xlabel('Epoch')\n",
+        "plt.ylabel('Accuracy')\n",
+        "plt.title('Model Accuracy')\n",
+        "plt.legend(loc='best')\n",
+        "plt.show()\n",
         "\n",
-        "# Display the test image and show the actual label\n",
-        "plt.axis(False)\n",
-        "plt.title(f'Actual label: {y_test[index].argmax()}')\n",
-        "plt.imshow(X_test[index].reshape(28, 28) * 255, cmap='gray')\n",
+        "plt.plot(history.history['loss'], 'b', label='train')\n",
+        "plt.plot(history.history['val_loss'], 'g', label='test')\n",
+        "plt.xlabel('Epoch')\n",
+        "plt.ylabel('Loss')\n",
+        "plt.title('Model Loss')\n",
+        "plt.legend(loc='best')\n",
         "plt.show()"
       ],
       "execution_count": null,
@@ -162,11 +165,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aWjdmhLAeSXV"
+        "id": "AUZQ5gIEeSXU"
       },
       "source": [
-        "# To do: Plot the accuracy and loss for both training and validation data\n",
-        "import matplotlib.pyplot as plt\n"
+        "# Make predition (change index to a number between 0 and 9999)\n",
+        "try:\n",
+        "  index = int(input(\"Enter an index between 0 and 9999: \"))\n",
+        "  assert 0 < index < 10000, \"The index should be between 0 and 9999\"\n",
+        "except Exception as e:\n",
+        "  print(\"Error: \", e)\n",
+        "else:\n",
+        "  res = model.predict(X_test[index].reshape(1, 784))\n",
+        "  print(res)\n",
+        "  print(f'Predicted label: {np.argmax(res)}')\n",
+        "\n",
+        "  # Display the test image and show the actual label\n",
+        "  plt.axis(False)\n",
+        "  plt.title(f'Actual label: {y_test[index].argmax()}')\n",
+        "  plt.imshow(X_test[index].reshape(28, 28) * 255, cmap='gray')\n",
+        "  plt.show()"
       ],
       "execution_count": null,
       "outputs": []
