Updated to plot accuracy and loss, and to get user's input for the index of the test image

--- a/handson_4b.ipynb
+++ b/handson_4b.ipynb
@@ -171,7 +171,7 @@
         "# Make predition (change index to a number between 0 and 9999)\n",
         "try:\n",
         "  index = int(input(\"Enter an index between 0 and 9999: \"))\n",
-        "  assert 0 < index < 10000, \"The index should be between 0 and 9999\"\n",
+        "  assert 0 <= index < 10000, \"The index should be between 0 and 9999\"\n",
         "except Exception as e:\n",
         "  print(\"Error: \", e)\n",
         "else:\n",
