Load dataset directly from GitHub

--- a/handson_4a.ipynb
+++ b/handson_4a.ipynb
@@ -64,7 +64,7 @@
       },
       "source": [
         "#Step 2: Load the dataset and split it into train & test sets\n",
-        "dataset = numpy.loadtxt(\"practical_ai/pima-indians-diabetes.csv\", delimiter=\",\")\n",
+        "dataset = numpy.loadtxt(\"https://raw.githubusercontent.com/wooihaw/datasets/main/pima-indians-diabetes.data.csv\", delimiter=\",\")\n",
         "# split into input (X) and output (Y) variables\n",
         "X = dataset[:,:-1]\n",
         "y = dataset[:,-1]\n",
