Updated Hands-on 5A with validation data

--- a/Handson_5.ipynb
+++ b/Handson_5.ipynb
@@ -145,7 +145,7 @@
         "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
         "# model fitting (train the model using the training set)\n",
-        "history = model.fit(training_images, training_labels, epochs=10, batch_size=64)"
+        "history = model.fit(training_images, training_labels, validation_data=(test_images, test_labels), epochs=10, batch_size=64)"
       ],
       "execution_count": null,
       "outputs": []
@@ -158,9 +158,18 @@
       "source": [
         "# Plot the performance of the model\n",
         "plt.plot(history.history['accuracy'], 'b', label='train')\n",
+        "plt.plot(history.history['val_accuracy'], 'g', label='test')\n",
         "plt.xlabel('Epoch')\n",
         "plt.ylabel('Accuracy')\n",
         "plt.title('Model Accuracy')\n",
+        "plt.legend(loc='best')\n",
+        "plt.show()\n",
+        "\n",
+        "plt.plot(history.history['loss'], 'b', label='train')\n",
+        "plt.plot(history.history['val_loss'], 'g', label='test')\n",
+        "plt.xlabel('Epoch')\n",
+        "plt.ylabel('Loss')\n",
+        "plt.title('Model Loss')\n",
         "plt.legend(loc='best')\n",
         "plt.show()"
       ],
@@ -186,17 +195,22 @@
         "id": "P6Y_Fac2ACOs"
       },
       "source": [
-        "# Predict the label of a test image (change n to between 0 and 9999 test another image)\n",
-        "n = 1111\n",
-        "x = np.expand_dims(test_images[n], axis=0)\n",
-        "classes = model.predict(x)\n",
-        "print(f'Predicted label: {classes.argmax()}')\n",
+        "# Predict the label of a test image (enter an index between 0 and 9999)\n",
+        "try:\n",
+        "  index = int(input(\"Enter an index between 0 and 9999: \"))\n",
+        "  assert 0 <= index < 10000, \"The index should be between 0 and 9999\"\n",
+        "except Exception as e:\n",
+        "  print(\"Error: \", e)\n",
+        "else:\n",
+        "  x = np.expand_dims(test_images[index], axis=0)\n",
+        "  classes = model.predict(x)\n",
+        "  print(f'Predicted label: {classes.argmax()}')\n",
         "\n",
-        "# Display the test image and show the actual label\n",
-        "plt.axis(False)\n",
-        "plt.title(f'Actual label: {test_labels[n]}')\n",
-        "plt.imshow(test_images[n].reshape(28, 28) * 255, cmap='gray')\n",
-        "plt.show()"
+        "  # Display the test image and show the actual label\n",
+        "  plt.axis(False)\n",
+        "  plt.title(f'Actual label: {test_labels[index]}')\n",
+        "  plt.imshow(test_images[index].reshape(28, 28) * 255, cmap='gray')\n",
+        "  plt.show()"
       ],
       "execution_count": null,
       "outputs": []
@@ -305,9 +319,9 @@
         "# Compile and train model\n",
         "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
         "\n",
-        "history = model.fit(train_generator, \n",
-        "                    steps_per_epoch=85, \n",
-        "                    epochs=5, \n",
+        "history = model.fit(train_generator,\n",
+        "                    steps_per_epoch=85,\n",
+        "                    epochs=5,\n",
         "                    validation_data=test_generator,\n",
         "                    validation_steps=10,\n",
         "                    verbose=1)"
@@ -527,21 +541,21 @@
         "# Add a dropout rate of 0.2\n",
         "x = Dropout(0.2)(x)\n",
         "# Add a final sigmoid layer for classification\n",
-        "x = Dense(3, activation='softmax')(x)           \n",
+        "x = Dense(3, activation='softmax')(x)\n",
         "\n",
-        "model = Model(base_model.input, x) \n",
+        "model = Model(base_model.input, x)\n",
         "\n",
-        "model.compile(optimizer ='rmsprop', \n",
-        "              loss = 'categorical_crossentropy', \n",
+        "model.compile(optimizer ='rmsprop',\n",
+        "              loss = 'categorical_crossentropy',\n",
         "              metrics = ['acc'])\n",
         "\n",
         "model.summary()\n",
         "\n",
-        "history = model.fit(train_generator, \n",
-        "                    steps_per_epoch=85, \n",
-        "                    epochs=3, \n",
-        "                    validation_data=test_generator, \n",
-        "                    validation_steps=10, \n",
+        "history = model.fit(train_generator,\n",
+        "                    steps_per_epoch=85,\n",
+        "                    epochs=3,\n",
+        "                    validation_data=test_generator,\n",
+        "                    validation_steps=10,\n",
         "                    verbose=1)"
       ],
       "execution_count": null,
