Updated Hands-on 5A and 5B

--- a/Handson_5.ipynb
+++ b/Handson_5.ipynb
@@ -247,7 +247,7 @@
       "source": [
         "# Extract dataset from Google Drive\n",
         "!cd /content/\n",
-        "!tar -xvf \"/content/drive/My Drive/three_animals.tar.gz\""
+        "!tar -xvf /content/drive/MyDrive/three_animals.tar.gz"
       ],
       "execution_count": null,
       "outputs": []
