--- a/Handson_5.ipynb
+++ b/Handson_5.ipynb
@@ -247,7 +247,7 @@
       "source": [
         "# Extract dataset from Google Drive\n",
         "!cd /content/\n",
-        "!tar -xvf /content/drive/MyDrive/three_animals.tar.gz"
+        "!tar -xvf /content/drive/MyDrive/three_animals.tar.gz > /dev/null"
       ],
       "execution_count": null,
       "outputs": []
@@ -527,8 +527,9 @@
         "for layer in base_model.layers:\n",
         "    layer.trainable = False\n",
         "\n",
-        "# Print the model summary\n",
-        "base_model.summary()\n",
+        "# Print the name of last layer\n",
+        "last_layer_name = model.layers[-1].name\n",
+        "print(f'Name of the last layer: {last_layer_name}')\n",
         "\n",
         "last_layer = base_model.get_layer('mixed7')\n",
         "print('last layer output shape: ', last_layer.output_shape)\n",
@@ -549,7 +550,14 @@
         "              loss = 'categorical_crossentropy',\n",
         "              metrics = ['acc'])\n",
         "\n",
-        "model.summary()\n",
+        "# Calculate the number of layers\n",
+        "num_layers = len(model.layers)\n",
+        "\n",
+        "# Calculate the total number of parameters\n",
+        "total_params = model.count_params()\n",
+        "\n",
+        "print(f'Number of layers: {num_layers}')\n",
+        "print(f'Total parameters to learn: {total_params}')\n",
         "\n",
         "history = model.fit(train_generator,\n",
         "                    steps_per_epoch=85,\n",
