Print only the number of extract files and folders

--- a/Handson_5.ipynb
+++ b/Handson_5.ipynb
@@ -247,7 +247,7 @@
       "source": [
         "# Extract dataset from Google Drive\n",
         "!cd /content/\n",
-        "!tar -xvf /content/drive/MyDrive/three_animals.tar.gz > /dev/null"
+        "!tar -xvf /content/drive/MyDrive/three_animals.tar.gz | wc -l"
       ],
       "execution_count": null,
       "outputs": []
@@ -526,10 +526,6 @@
         "# Make all the layers in the pre-trained model non-trainable\n",
         "for layer in base_model.layers:\n",
         "    layer.trainable = False\n",
-        "\n",
-        "# Print the name of last layer\n",
-        "last_layer_name = model.layers[-1].name\n",
-        "print(f'Name of the last layer: {last_layer_name}')\n",
         "\n",
         "last_layer = base_model.get_layer('mixed7')\n",
         "print('last layer output shape: ', last_layer.output_shape)\n",
