Updated the shell command for dataset extraction.

--- a/Handson_5.ipynb
+++ b/Handson_5.ipynb
@@ -247,7 +247,7 @@
       "source": [
         "# Extract dataset from Google Drive\n",
         "!cd /content/\n",
-        "!tar -xvf /content/drive/MyDrive/three_animals.tar.gz | wc -l"
+        "!tar -xf /content/drive/MyDrive/three_animals.tar.gz > /dev/null && echo \"A total of $(find /content/three_animals/ -type f | wc -l) files have been successfully extracted.\""
       ],
       "execution_count": null,
       "outputs": []
