Updated parameter for SGD().

--- a/handson_4a.ipynb
+++ b/handson_4a.ipynb
@@ -98,7 +98,7 @@
       },
       "source": [
         "#Step 4: Compile the neural network model\n",
-        "model.compile(loss='binary_crossentropy', optimizer=SGD(lr=0.01), metrics=['accuracy'])"
+        "model.compile(loss='binary_crossentropy', optimizer=SGD(learning_rate=0.01), metrics=['accuracy'])"
       ],
       "execution_count": null,
       "outputs": []
