Updated for new version of TensorFlow

--- a/Handson_5.ipynb
+++ b/Handson_5.ipynb
@@ -320,10 +320,8 @@
         "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['acc'])\n",
         "\n",
         "history = model.fit(train_generator,\n",
-        "                    steps_per_epoch=85,\n",
         "                    epochs=5,\n",
         "                    validation_data=test_generator,\n",
-        "                    validation_steps=10,\n",
         "                    verbose=1)"
       ],
       "execution_count": null,
@@ -392,7 +390,7 @@
         "with open(\"model1.json\", \"w\") as json_file:\n",
         "  json_file.write(model_json)\n",
         "# serialize weights to HDF5\n",
-        "model.save_weights(\"model1.h5\")\n",
+        "model.save_weights(\"model1.weights.h5\")\n",
         "print(\"Saved model to disk\")\n",
         "\n",
         "from json import dump\n",
@@ -420,7 +418,7 @@
         "json_file.close()\n",
         "model = model_from_json(model_json)\n",
         "# load weights into new model\n",
-        "model.load_weights(\"model1.h5\")\n",
+        "model.load_weights(\"model1.weights.h5\")\n",
         "\n",
         "# load class indices\n",
         "with open('class_indices1.json', 'r') as f:\n",
@@ -528,7 +526,6 @@
         "    layer.trainable = False\n",
         "\n",
         "last_layer = base_model.get_layer('mixed7')\n",
-        "print('last layer output shape: ', last_layer.output_shape)\n",
         "last_output = last_layer.output\n",
         "\n",
         "# Applies average pooling on the spatial dimensions until each spatial dimension is one\n",
@@ -556,10 +553,8 @@
         "print(f'Total parameters to learn: {total_params}')\n",
         "\n",
         "history = model.fit(train_generator,\n",
-        "                    steps_per_epoch=85,\n",
         "                    epochs=3,\n",
         "                    validation_data=test_generator,\n",
-        "                    validation_steps=10,\n",
         "                    verbose=1)"
       ],
       "execution_count": null,
@@ -642,7 +637,7 @@
         "with open(\"model2.json\", \"w\") as json_file:\n",
         "  json_file.write(model_json)\n",
         "# serialize weights to HDF5\n",
-        "model.save_weights(\"model2.h5\")\n",
+        "model.save_weights(\"model2.weights.h5\")\n",
         "print(\"Saved model to disk\")\n",
         "\n",
         "from json import dump\n",
@@ -670,7 +665,7 @@
         "json_file.close()\n",
         "model = model_from_json(model_json)\n",
         "# load weights into new model\n",
-        "model.load_weights(\"model2.h5\")\n",
+        "model.load_weights(\"model2.weights.h5\")\n",
         "\n",
         "# load class indices\n",
         "with open('class_indices2.json', 'r') as f:\n",
