Updated Hands-on 5B & 5C to use the files.upoad() method from Google Colab to allow the user to select new images for prediction.

--- a/Handson_5.ipynb
+++ b/Handson_5.ipynb
@@ -51,19 +51,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZWhDKcQmEkVX"
-      },
-      "source": [
-        "# Create a clone of practical_ai repo\n",
-        "!cd /content/\n",
-        "!git clone https://github.com/wooihaw/practical_ai.git"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "UXTGgWG_69dp"
       },
       "source": [
@@ -432,19 +419,34 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display the test image and show the predicted class\n",
-        "file = 'practical_ai/animal01.jpg'\n",
-        "img = load_img(file, target_size=(150, 150))\n",
-        "x = img_to_array(img)/255.\n",
-        "x = np.expand_dims(x, axis=0)\n",
-        "classes = model.predict(x)\n",
-        "for i, k in enumerate(class_indices):\n",
-        "  print(f'{k:10}: {classes[0, i]: .3f}')\n",
+        "# Select new images and show the predicted class\n",
+        "from google.colab import files\n",
+        "uploaded = files.upload()\n",
         "\n",
-        "plt.axis(False)\n",
-        "plt.imshow(load_img(file))\n",
-        "plt.title(f'Predicted as {map2class[classes.argmax()]}', y=0, pad=-10, verticalalignment=\"top\")\n",
-        "plt.show()"
+        "if not uploaded:\n",
+        "  print(\"No image uploaded. Exiting.\")\n",
+        "else:\n",
+        "  for fn in uploaded.keys():\n",
+        "    image_path = fn\n",
+        "    img = load_img(image_path, target_size=(150, 150))\n",
+        "    x = img_to_array(img)/255.\n",
+        "    x = np.expand_dims(x, axis=0)\n",
+        "    classes = model.predict(x)\n",
+        "\n",
+        "    predicted_class = \"None\"\n",
+        "    max_prob = 0.0\n",
+        "\n",
+        "    for i, k in enumerate(class_indices):\n",
+        "      prob = classes[0, i]\n",
+        "      print(f'{k:10}: {prob: .3f}')\n",
+        "      if prob > 0.5 and prob > max_prob:\n",
+        "        max_prob = prob\n",
+        "        predicted_class = map2class[i]\n",
+        "\n",
+        "    plt.axis(False)\n",
+        "    plt.imshow(load_img(image_path))\n",
+        "    plt.title(f'Predicted as {predicted_class}', y=0, pad=-10, verticalalignment=\"top\")\n",
+        "    plt.show()"
       ],
       "metadata": {
         "id": "dsMfLjA9Ztvk"
@@ -679,19 +681,34 @@
     {
       "cell_type": "code",
       "source": [
-        "# Display the test image and show the predicted class\n",
-        "file = 'practical_ai/animal01.jpg'\n",
-        "img = load_img(file, target_size=(150, 150))\n",
-        "x = img_to_array(img)/255.\n",
-        "x = np.expand_dims(x, axis=0)\n",
-        "classes = model.predict(x)\n",
-        "for i, k in enumerate(class_indices):\n",
-        "  print(f'{k:10}: {classes[0, i]: .3f}')\n",
+        "# Select new images and show the predicted class\n",
+        "from google.colab import files\n",
+        "uploaded = files.upload()\n",
         "\n",
-        "plt.axis(False)\n",
-        "plt.imshow(load_img(file))\n",
-        "plt.title(f'Predicted as {map2class[classes.argmax()]}', y=0, pad=-10, verticalalignment=\"top\")\n",
-        "plt.show()"
+        "if not uploaded:\n",
+        "  print(\"No image uploaded. Exiting.\")\n",
+        "else:\n",
+        "  for fn in uploaded.keys():\n",
+        "    image_path = fn\n",
+        "    img = load_img(image_path, target_size=(150, 150))\n",
+        "    x = img_to_array(img)/255.\n",
+        "    x = np.expand_dims(x, axis=0)\n",
+        "    classes = model.predict(x)\n",
+        "\n",
+        "    predicted_class = \"None\"\n",
+        "    max_prob = 0.0\n",
+        "\n",
+        "    for i, k in enumerate(class_indices):\n",
+        "      prob = classes[0, i]\n",
+        "      print(f'{k:10}: {prob: .3f}')\n",
+        "      if prob > 0.5 and prob > max_prob:\n",
+        "        max_prob = prob\n",
+        "        predicted_class = map2class[i]\n",
+        "\n",
+        "    plt.axis(False)\n",
+        "    plt.imshow(load_img(image_path))\n",
+        "    plt.title(f'Predicted as {predicted_class}', y=0, pad=-10, verticalalignment=\"top\")\n",
+        "    plt.show()"
       ],
       "metadata": {
         "id": "q9NKlPHqb5Kc"
