--- a/Handson_5.ipynb
+++ b/Handson_5.ipynb
@@ -234,7 +234,7 @@
       "source": [
         "# Extract dataset from Google Drive\n",
         "!cd /content/\n",
-        "!tar -xf /content/drive/MyDrive/three_animals.tar.gz > /dev/null && echo \"A total of $(find /content/three_animals/ -type f | wc -l) files have been successfully extracted.\""
+        "!unzip /content/drive/MyDrive/three_animals_dataset.zip > /dev/null && echo \"A total of $(find /content/three_animals_dataset/ -type f | wc -l) files have been successfully extracted.\""
       ],
       "execution_count": null,
       "outputs": []
@@ -254,11 +254,12 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Setup training images and testing images\n",
-        "train_dir = 'three_animals/train'\n",
-        "test_dir = 'three_animals/validate/'\n",
+        "train_dir = 'three_animals_dataset/train'\n",
+        "test_dir = 'three_animals_dataset/test/'\n",
         "\n",
         "train_datagen = ImageDataGenerator(\n",
         "                    rescale=1/255.,\n",
+        "                    validation_split=0.1,\n",
         "                    rotation_range=30,\n",
         "                    width_shift_range=0.2,\n",
         "                    height_shift_range=0.2,\n",
@@ -273,7 +274,19 @@
         "                    train_dir,\n",
         "                    batch_size=32,\n",
         "                    target_size=(150,150),\n",
-        "                    class_mode='categorical')\n",
+        "                    class_mode='categorical',\n",
+        "                    subset='training',\n",
+        "                    interpolation='bicubic'\n",
+        ")\n",
+        "\n",
+        "validate_generator = train_datagen.flow_from_directory(\n",
+        "    train_dir,\n",
+        "    target_size=(150,150),\n",
+        "    batch_size=32,\n",
+        "    class_mode='categorical',\n",
+        "    subset='validation',\n",
+        "    interpolation='bicubic'\n",
+        ")\n",
         "\n",
         "test_generator = test_datagen.flow_from_directory(\n",
         "                    test_dir,\n",
@@ -308,7 +321,7 @@
         "\n",
         "history = model.fit(train_generator,\n",
         "                    epochs=5,\n",
-        "                    validation_data=test_generator,\n",
+        "                    validation_data=validate_generator,\n",
         "                    verbose=1)"
       ],
       "execution_count": null,
@@ -335,6 +348,19 @@
         "plt.legend(loc=0)\n",
         "plt.show()"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Evaluate the performance of the trained model using the test set\n",
+        "score = model.evaluate(test_generator)\n",
+        "print(f'Loss: {score[0]:.4f}, accuracy: {score[1]:.4f}')"
+      ],
+      "metadata": {
+        "id": "BxUhVc7Y9yE4"
+      },
       "execution_count": null,
       "outputs": []
     },
@@ -483,12 +509,13 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "# Setup training images and testing images\n",
-        "train_dir = 'three_animals/train'\n",
-        "test_dir = 'three_animals/validate/'\n",
+        "train_dir = 'three_animals_dataset/train'\n",
+        "test_dir = 'three_animals_dataset/test/'\n",
         "\n",
         "train_datagen = ImageDataGenerator(\n",
         "                    rescale=1/255.,\n",
-        "                    rotation_range=40,\n",
+        "                    validation_split=0.1,\n",
+        "                    rotation_range=30,\n",
         "                    width_shift_range=0.2,\n",
         "                    height_shift_range=0.2,\n",
         "                    shear_range=0.2,\n",
@@ -502,7 +529,19 @@
         "                    train_dir,\n",
         "                    batch_size=32,\n",
         "                    target_size=(150,150),\n",
-        "                    class_mode='categorical')\n",
+        "                    class_mode='categorical',\n",
+        "                    subset='training',\n",
+        "                    interpolation='bicubic'\n",
+        ")\n",
+        "\n",
+        "validate_generator = train_datagen.flow_from_directory(\n",
+        "    train_dir,\n",
+        "    target_size=(150,150),\n",
+        "    batch_size=32,\n",
+        "    class_mode='categorical',\n",
+        "    subset='validation',\n",
+        "    interpolation='bicubic'\n",
+        ")\n",
         "\n",
         "test_generator = test_datagen.flow_from_directory(\n",
         "                    test_dir,\n",
@@ -583,6 +622,19 @@
         "plt.legend(loc=0)\n",
         "plt.show()"
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Evaluate the performance of the trained model using the test set\n",
+        "score = model.evaluate(test_generator)\n",
+        "print(f'Loss: {score[0]:.4f}, accuracy: {score[1]:.4f}')"
+      ],
+      "metadata": {
+        "id": "lVgvfJQr_KyK"
+      },
       "execution_count": null,
       "outputs": []
     },
