Updated Hands-on 5B to use file shared from Google Drive directly.

--- a/Handson_5.ipynb
+++ b/Handson_5.ipynb
@@ -219,9 +219,10 @@
         "id": "DncYnUx1ACOs"
       },
       "source": [
-        "# Mount Google Drive\n",
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "# Old code\n",
+        "# # Mount Google Drive\n",
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')"
       ],
       "execution_count": null,
       "outputs": []
@@ -233,9 +234,23 @@
       },
       "source": [
         "# Extract dataset from Google Drive\n",
-        "!cd /content/\n",
-        "!unzip /content/drive/MyDrive/three_animals_dataset.zip > /dev/null && echo \"A total of $(find /content/three_animals_dataset/ -type f | wc -l) files have been successfully extracted.\""
+        "# !cd /content/\n",
+        "# !unzip /content/drive/MyDrive/three_animals_dataset.zip > /dev/null && echo \"A total of $(find /content/three_animals_dataset/ -type f | wc -l) files have been successfully extracted.\""
       ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install gdown\n",
+        "!cd /content/\n",
+        "!gdown 1hO_sRQwh4MxqBXEuwGe-2KVIQr7OaE8g -O three_animals_dataset.zip\n",
+        "!unzip /content/three_animals_dataset.zip > /dev/null && echo \"A total of $(find /content/three_animals_dataset/ -type f | wc -l) files have been successfully extracted.\""
+      ],
+      "metadata": {
+        "id": "9YRQAZxco5mm"
+      },
       "execution_count": null,
       "outputs": []
     },
