Included the plotting of model loss

--- a/handson_4a.ipynb
+++ b/handson_4a.ipynb
@@ -47,11 +47,10 @@
         "from tensorflow.keras.layers import Dense\n",
         "from sklearn.model_selection import train_test_split as split\n",
         "from tensorflow.keras.optimizers import SGD\n",
-        "# To do: Import StandardScaler from sklearn.preprocessing\n",
-        "\n",
-        "# To do: Import EarlyStopping from tensorflow.keras.callbacks\n",
-        "\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from tensorflow.keras.callbacks import EarlyStopping\n",
         "import numpy\n",
+        "import matplotlib.pyplot as plt\n",
         "numpy.random.seed(7)  # fix random seed for reproducibility"
       ],
       "execution_count": null,
@@ -112,7 +111,7 @@
       "source": [
         "#Step 5: Fit the neural network to the dataset\n",
         "# To do: Add early stopping\n",
-        "history = model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=100, batch_size=8)"
+        "history = model.fit(X_train, y_train, validation_data=(X_test, y_test), epochs=100, batch_size=8)\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -125,6 +124,7 @@
       "source": [
         "#Step 6: Evaluate the neural network model on the test set\n",
         "scores = model.evaluate(X_test, y_test)\n",
+        "\n",
         "print(f\"{model.metrics_names[0]}: {scores[0]:.2f}\")\n",
         "print(f\"{model.metrics_names[1]}: {scores[1]:.2%}\")"
       ],
@@ -139,7 +139,6 @@
       },
       "source": [
         "# Step 7: Plot the model accuracy\n",
-        "import matplotlib.pyplot as plt\n",
         "plt.plot(history.history['accuracy'], 'b', label='train')\n",
         "plt.plot(history.history['val_accuracy'], 'g', label='test')\n",
         "plt.xlabel('Epoch')\n",
@@ -157,7 +156,14 @@
         "id": "JHdvCeZPmQk8"
       },
       "source": [
-        "# To do: Plot the model loss for both training and testing data\n"
+        "# Step 8: Plot the model loss for both training and testing data\n",
+        "plt.plot(history.history['loss'], 'b', label='train')\n",
+        "plt.plot(history.history['val_loss'], 'g', label='test')\n",
+        "plt.xlabel('Epoch')\n",
+        "plt.ylabel('Loss')\n",
+        "plt.title('Model Loss')\n",
+        "plt.legend(loc='best')\n",
+        "plt.show()"
       ],
       "execution_count": null,
       "outputs": []
