--- a/Handson_5.ipynb
+++ b/Handson_5.ipynb
@@ -71,9 +71,11 @@
         "import tensorflow as tf\n",
         "from tensorflow.keras.datasets import mnist\n",
         "from tensorflow.keras.models import Sequential\n",
-        "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense\n",
+        "from tensorflow.keras.layers import Input, Conv2D, MaxPooling2D, Flatten, Dense\n",
+        "from tensorflow.keras.callbacks import EarlyStopping\n",
         "import matplotlib.pyplot as plt\n",
-        "import numpy as np"
+        "import numpy as np\n",
+        "from sklearn.metrics import classification_report, ConfusionMatrixDisplay"
       ],
       "execution_count": null,
       "outputs": []
@@ -120,19 +122,24 @@
       "source": [
         "# Define the model\n",
         "model = Sequential()\n",
-        "model.add(Conv2D(20, (5, 5), padding=\"same\", input_shape=(28, 28, 1), activation='relu'))\n",
+        "model.add(Input(shape=(28, 28, 1)))\n",
+        "model.add(Conv2D(6, (5, 5), padding=\"same\", activation='relu'))\n",
         "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
-        "model.add(Conv2D(50, (5, 5), padding=\"same\", activation='relu'))\n",
+        "model.add(Conv2D(16, (5, 5), padding=\"valid\", activation='relu'))\n",
         "model.add(MaxPooling2D(pool_size=(2, 2), strides=(2, 2)))\n",
         "model.add(Flatten())\n",
-        "model.add(Dense(500, activation='relu'))\n",
+        "model.add(Dense(120, activation='relu'))\n",
+        "model.add(Dense(84, activation='relu'))\n",
         "model.add(Dense(10, activation='softmax'))\n",
         "\n",
         "# Compile the model\n",
         "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
         "\n",
+        "# Use EarlyStopping to prevent overfitting\n",
+        "early_stop = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+        "\n",
         "# model fitting (train the model using the training set)\n",
-        "history = model.fit(training_images, training_labels, validation_data=(test_images, test_labels), epochs=10, batch_size=64)"
+        "history = model.fit(training_images, training_labels, validation_split=0.1, epochs=20, batch_size=64, callbacks=[early_stop])"
       ],
       "execution_count": null,
       "outputs": []
@@ -168,7 +175,23 @@
       "source": [
         "# Evaluate the performance of the trained model using the test set\n",
         "score = model.evaluate(test_images, test_labels)\n",
-        "print(f'Loss: {score[0]:.4f}, accuracy: {score[1]:.4f}')"
+        "print(f'Loss: {score[0]:.4f}, accuracy: {score[1]:.3%}')\n",
+        "\n",
+        "# Convert probabilities to predicted classes\n",
+        "pred_labels = np.argmax(model.predict(test_images), axis=1)\n",
+        "\n",
+        "# Convert one-hot test labels to integers\n",
+        "# y_true = y_test.argmax(axis=1)\n",
+        "\n",
+        "# Print classification report\n",
+        "print(\"\\nClassification Report:\")\n",
+        "print(classification_report(test_labels, pred_labels))\n",
+        "\n",
+        "# Plot confusion matrix\n",
+        "plt.figure(figsize=(10, 8))\n",
+        "ConfusionMatrixDisplay.from_predictions(test_labels, pred_labels, cmap='Blues')\n",
+        "plt.title(\"Confusion Matrix for LeNet on MNIST\")\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "iXDzhEF2XPaa"
